# hrtb-lending-iterator-rs

./: Cargo.toml  README.md
src/: lib.rs
src/adapters/: enumerate.rs  from.rs  inspect.rs  into.rs  into_iter.rs  into_owned.rs  map.rs  mod.rs  take_while.rs  to_owned.rs  to_owned_item.rs
src/sources/: mod.rs  windows_mut.rs
src/traits/: exact_size.rs  ext.rs  into.rs  into_lending.rs  lending_iterator.rs  mod.rs
tests/: from_into.rs  lending_iterator.rs  windows_mut.rs
