[package]
name = "hrtb-lending-iterator"
description = "A lending iterator trait based on higher-rank trait bounds (HRTBs)"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/vigna/hrtb-lending-iterator-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["iterator"]
categories = ["data-structures"]
authors = ["Tommaso Fontana <tommaso.fontana.96@gmail.com>", "Valentin Lorentz <valentin.lorentz@inria.fr>", "Sebastiano Vigna <sebastiano.vigna@unimi.it>"]
